--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,8 @@
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/underscore/underscore.js"></script>
     <script src="../bower_components/backbone/backbone.js"></script>
-
+    <script src="../bower_components/firebase/firebase.js"></script>
+    <script src="../bower_components/backfire/backbone-firebase.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
