--- a/test/index.html
+++ b/test/index.html
@@ -21,7 +21,7 @@
     <script src="../bower_components/underscore/underscore.js"></script>
     <script src="../bower_components/backbone/backbone.js"></script>
     <!-- include spec files here... -->
-    <script src="../app/main.js"></script>
+    <script src="../app/scripts/main.js"></script>
     <script src="spec/test.js"></script>
 
     <script>mocha.run()</script>
